testdata/asm/invalid/fncall_invalid_06.lisp
;;
(defcolumns (X :i16) (Y :i8))
(defcall (Y) f (X))
